--- a/spirals/datris03/web/game.html
+++ b/spirals/datris03/web/game.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>Datris</title>
+    <title>Tetris in Dart: Datris</title>
     <link rel="stylesheet" href="game.css"/>
   </head>
   <body>
